src/components/common/VideoCard/VideoCard.module.css
/* VideoCard.module.css */

.container {
  box-sizing: border-box;
  position: relative;
  background: var(--color-surfaceContainerLowest);
  border: 1px solid var(--color-outlineVariant);
  border-radius: 12px;
  padding: 10px;
  padding-bottom: 12px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-width: 100%;
}

.videoFrame {
  width: 100%;
  aspect-ratio: 16 / 9;
  border-radius: 8px;
  overflow: hidden;
  flex-shrink: 0;
}

.details {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.title {
  font-family: "Pretendard", sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  margin: 0;
}

.subtitle {
  font-family: "Pretendard", sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  margin: 0;
}

.bookmarkIcon {
  width: 18px;
  height: 20px;
  cursor: pointer;
  align-self: flex-end;
}

